--- a/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
+++ b/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Factory\CustomFactoryExpressionFactoryTests.cs" />
     <Compile Include="Factory\DefaultFactoryExpressionFactoryTests.cs" />
     <Compile Include="Factory\FallbackFactoryExpressionFactoryTests.cs" />
+    <Compile Include="Factory\InitializeMembersTaskTests.cs" />
     <Compile Include="Factory\InitializeVariablesTaskTests.cs" />
     <Compile Include="Factory\InititalizeFragmentsTaskTests.cs" />
     <Compile Include="Factory\ReturnTargetAsObjectTaskTests.cs" />
@@ -104,6 +105,7 @@
     <Compile Include="Utilities\CollectionExtensionsTests.cs" />
     <Compile Include="Utilities\EnumerableExtensionsTests.cs" />
     <Compile Include="Utilities\PlaceholderTests.cs" />
+    <Compile Include="Utilities\ReflectionExtensionsTests.cs" />
     <Compile Include="Utilities\ReflectionGatewayTests.cs" />
     <Compile Include="Utilities\ReflectTests.cs" />
   </ItemGroup>
