--- a/Sources/Bijectiv/Bijectiv.csproj
+++ b/Sources/Bijectiv/Bijectiv.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Builder\AutoTransformFragment.cs" />
     <Compile Include="Factory\AutoTransformTask.cs" />
     <Compile Include="Factory\FallbackFactoryExpressionFactory.cs" />
+    <Compile Include="Factory\InitializeMembersTask.cs" />
     <Compile Include="IAutoTransformStrategy.cs" />
     <Compile Include="Utilities\IReflectionGateway.cs" />
     <Compile Include="Utilities\JetBrains.Annotations.cs">
@@ -109,6 +110,7 @@
     <Compile Include="Utilities\EnumerableExtensions.cs" />
     <Compile Include="Utilities\Placeholder.cs" />
     <Compile Include="Utilities\Reflect.cs" />
+    <Compile Include="Utilities\ReflectionExtensions.cs" />
     <Compile Include="Utilities\ReflectionGateway.cs" />
     <Compile Include="Utilities\ReflectionOptions.cs" />
   </ItemGroup>
