--- a/Sources/Bijectiv/Bijectiv.csproj
+++ b/Sources/Bijectiv/Bijectiv.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Builder\NullAutoTransformStrategy.cs" />
     <Compile Include="Builder\AutoTransformFragment.cs" />
     <Compile Include="Builder\NullSourceFragment.cs" />
+    <Compile Include="Factory\AutoTransformTaskDetail.cs" />
     <Compile Include="Factory\AutoTransformTask.cs" />
     <Compile Include="Factory\CacheTargetTask.cs" />
     <Compile Include="Factory\FallbackFactoryExpressionFactory.cs" />
