--- a/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
+++ b/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
@@ -80,8 +80,9 @@
     <Compile Include="Builder\InjectionDefinitionTests.cs" />
     <Compile Include="Builder\InjectionFragmentTests.cs" />
     <Compile Include="Factory\ActivateTargetExpressionFactoryTests.cs" />
-    <Compile Include="Factory\AutoTransformTaskDetailTests.cs" />
-    <Compile Include="Factory\AutoTransformTaskTests.cs" />
+    <Compile Include="Factory\AutoInjectionTaskDetailTests.cs" />
+    <Compile Include="Factory\AutoInjectionTaskTests.cs" />
+    <Compile Include="Factory\AutoInjectionTaskTransformDetailTests.cs" />
     <Compile Include="Factory\CacheTargetTaskTests.cs" />
     <Compile Include="Factory\CreateTargetTaskTests.cs" />
     <Compile Include="Factory\CustomFactoryExpressionFactoryTests.cs" />
