--- a/Sources/Bijectiv.TestUtilities/Bijectiv.TestUtilities.csproj
+++ b/Sources/Bijectiv.TestUtilities/Bijectiv.TestUtilities.csproj
@@ -62,6 +62,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stub.cs" />
     <Compile Include="TestExtensions.cs" />
+    <Compile Include="TestTypes\AutoMergeTestClass1.cs" />
+    <Compile Include="TestTypes\AutoMergeTestClass2.cs" />
     <Compile Include="TestTypes\AutoTransformTestClass1.cs" />
     <Compile Include="TestTypes\BaseTestClass1.cs" />
     <Compile Include="TestTypes\BaseTestClass2.cs" />
