--- a/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
+++ b/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Stores\CompositeInjectionStoreTests.cs" />
     <Compile Include="Stores\ConvertibleInjectionStoreTests.cs" />
     <Compile Include="Stores\DelegateInjectionStoreFactoryTests.cs" />
+    <Compile Include="Stores\EnumerableToArrayInjectionStoreTests.cs" />
     <Compile Include="Stores\IdenticalPrimitiveInjectionStoreTests.cs" />
     <Compile Include="Stores\InstanceInjectionStoreFactoryTests.cs" />
     <Compile Include="TargetCacheTests.cs" />
