--- a/Sources/Bijectiv/Bijectiv.csproj
+++ b/Sources/Bijectiv/Bijectiv.csproj
@@ -77,11 +77,13 @@
     <Compile Include="IInjection.cs" />
     <Compile Include="Injections\EnumerableToArrayInjection.cs" />
     <Compile Include="Injections\DelegateMerge.cs" />
+    <Compile Include="Injections\EnumerableToEnumerableInjection.cs" />
     <Compile Include="ITargetCache.cs" />
     <Compile Include="PostMergeAction.cs" />
     <Compile Include="Stores\EnumerableToArrayInjectionStore.cs" />
     <Compile Include="TargetCache.cs" />
     <Compile Include="Injections\MergeResult.cs" />
+    <Compile Include="Utilities\EnumerableFactory.cs" />
     <Compile Include="Utilities\IReflectionGateway.cs" />
     <Compile Include="Utilities\JetBrains.Annotations.cs">
       <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
