Added tests for the enumerable factory.

--- a/Sources/Bijectiv.TestUtilities/Bijectiv.TestUtilities.csproj
+++ b/Sources/Bijectiv.TestUtilities/Bijectiv.TestUtilities.csproj
@@ -67,14 +67,18 @@
     <Compile Include="TestTypes\AutoTransformTestClass1.cs" />
     <Compile Include="TestTypes\BaseTestClass1.cs" />
     <Compile Include="TestTypes\BaseTestClass2.cs" />
+    <Compile Include="TestTypes\NonMonadicPlaceholderCollection.cs" />
+    <Compile Include="TestTypes\CrazyPlaceholderCollection.cs" />
     <Compile Include="TestTypes\DerivedTestClass1.cs" />
     <Compile Include="TestTypes\DerivedTestClass2.cs" />
     <Compile Include="TestTypes\EquatableClass.cs" />
     <Compile Include="TestTypes\FieldTestClass.cs" />
     <Compile Include="TestTypes\GenericPlaceholderCollection.cs" />
+    <Compile Include="TestTypes\ICrazyPlaceholderEnumerable.cs" />
     <Compile Include="TestTypes\IPlaceholderEnumerable.cs" />
     <Compile Include="TestTypes\ITestInterface1.cs" />
     <Compile Include="TestTypes\MultiConstructorTestClass.cs" />
+    <Compile Include="TestTypes\PlaceholderCollection.cs" />
     <Compile Include="TestTypes\PropertyTestClass.cs" />
     <Compile Include="TestTypes\SealedClass1.cs" />
     <Compile Include="TestTypes\TestClass1.cs" />
