--- a/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
+++ b/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Factory\TryGetTargetFromCacheTaskTests.cs" />
     <Compile Include="Injections\DelegateMergeTests.cs" />
     <Compile Include="Injections\EnumerableToArrayInjectionTests.cs" />
+    <Compile Include="Injections\EnumerableToEnumerableInjectionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Spikes.cs" />
     <Compile Include="Stores\CollectionInjectionStoreTests.cs" />
