--- a/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
+++ b/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Injections\DelegateMergeTests.cs" />
     <Compile Include="Injections\EnumerableToArrayInjectionTests.cs" />
     <Compile Include="Injections\EnumerableToEnumerableInjectionTests.cs" />
+    <Compile Include="Injections\NullTargetFinderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Spikes.cs" />
     <Compile Include="Stores\CollectionInjectionStoreTests.cs" />
