--- a/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
+++ b/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Builder\CustomFactoryParametersTests.cs" />
     <Compile Include="Builder\DefaultFactoryFragmentTests.cs" />
     <Compile Include="Builder\InheritsFragmentTests.cs" />
+    <Compile Include="Builder\InstanceRegistryTests.cs" />
     <Compile Include="Builder\NameRegexAutoTransformStrategyTests.cs" />
     <Compile Include="Builder\NullAutoTransformStrategyTests.cs" />
     <Compile Include="Builder\AutoTransformFragmentTests.cs" />
