--- a/Sources/Bijectiv.TestUtilities/Bijectiv.TestUtilities.csproj
+++ b/Sources/Bijectiv.TestUtilities/Bijectiv.TestUtilities.csproj
@@ -67,6 +67,7 @@
     <Compile Include="TestTypes\AutoTransformTestClass1.cs" />
     <Compile Include="TestTypes\BaseTestClass1.cs" />
     <Compile Include="TestTypes\BaseTestClass2.cs" />
+    <Compile Include="TestTypes\EquatableCollection.cs" />
     <Compile Include="TestTypes\NonMonadicPlaceholderCollection.cs" />
     <Compile Include="TestTypes\CrazyPlaceholderCollection.cs" />
     <Compile Include="TestTypes\DerivedTestClass1.cs" />
