Moved enumerable* to appropriate namespaces

--- a/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
+++ b/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
@@ -124,8 +124,8 @@
     <Compile Include="Injections\PassThroughInjectionTests.cs" />
     <Compile Include="Utilities\CollectionExtensionsTests.cs" />
     <Compile Include="Utilities\EnumerableExtensionsTests.cs" />
-    <Compile Include="Utilities\EnumerableFactoryRegistrationTests.cs" />
-    <Compile Include="Utilities\EnumerableFactoryTests.cs" />
+    <Compile Include="Builder\EnumerableRegistrationTests.cs" />
+    <Compile Include="Stores\EnumerableFactoryTests.cs" />
     <Compile Include="Utilities\ParameterExpressionVisitorTests.cs" />
     <Compile Include="Utilities\PlaceholderExpressionVisitorTests.cs" />
     <Compile Include="Utilities\PlaceholderTests.cs" />
